# hypermedia-fullstack-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-production.yml  deploy-staging.yml  testing.yml
alembic/: env.py
docs/: database_backweb_setup.md  database_migrations.md  db_commands.md  developing.md  getting_started.md  snippets.md
scripts/: prestart.sh
server/: config.py  database.py  dependencies.py  main.py  models.py  prestart.py
server/components/: __init__.py  _icons.py  _layout.py  _toasts.py
server/static/css/: base.css  normalize.css
server/views/: index.py
tests/: conftest.py
